<resources>
    <string name="app_name">Manager_Android</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textAccount">帳號</string>
    <string name="textPassword">密碼</string>
    <string name="textLogin">登入</string>
    <string name="textManager">使用者資料管理</string>
    <string name="textCustomer">客戶端</string>
    <string name="textDriver">駕駛端</string>
    <string name="textData">統計數據</string>
    <string name="textCustomerOrder">客戶訂單記錄</string>
    <string name="textDriverOrder">駕駛訂單記錄</string>
    <string name="textIncome">營收統計資料</string>
    <string name="textService">客服管理</string>
    <string name="textApp">APP問題</string>
    <string name="textUser">客戶問題</string>
</resources>
